# mesonpep517

./: .gitignore  .gitlab-ci.yml  README.md  meson.build  pyproject.toml  release
doc/: generate_doc.py  index.md  meson.build  pyproject-gen.md  pyproject.md  pyproject.md.in  sitemap.txt
mesonpep517/: buildapi.py  meson.build  pep425tags.py  schema.py
