[build-system]
requires = ["wheel>0.33", "meson", "toml", "setuptools"]
backend-path = "."
build-backend = "mesonpep517.buildapi"

[tool.mesonpep517.metadata]
author="Thibault Saunier"
author-email="tsaunier@gnome.org"
summary="Create pep517 compliant packages from the meson build system"
home-page="https://gitlab.com/thiblahute/mesonpep517"
requires-python="py3"
description-file="README.md"
platforms="any"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires = ["wheel>0.33", "meson", "toml", "setuptools"]
project-urls= [
    "Source, https://gitlab.com/thiblahute/mesonpep517",
    "Documentation, https://thiblahute.gitlab.io/mesonpep517/",
]
