[project]
authors = [
    {name="Thibault Saunier", email="tsaunier@gnome.org"}
]

description="Create pep517 compliant packages from the meson build system"
home-page="https://gitlab.com/thiblahute/mesonpep517"
requires-python="~=3.0"
readme="README.md"
platforms="any"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["wheel>0.33", "meson", "toml", "setuptools", "packaging"]

[project.urls]
repository = "https://gitlab.com/thiblahute/mesonpep517"
documentation = "https://thiblahute.gitlab.io/mesonpep517/"

[build-system]
requires = ["wheel>0.33", "meson", "toml", "setuptools", "packaging"]
backend-path = "."
build-backend = "mesonpep517.buildapi"
